@@ -24,6 +24,8 @@ using System.IO;
 using NUnit.Framework;
 using System.Transactions;
 using System.Data.Common;
+using System.Diagnostics;
+using System.Text;
 
 namespace MySql.Data.MySqlClient.Tests
 {
@@ -419,6 +421,158 @@ namespace MySql.Data.MySqlClient.Tests
 
             ReusingSameConnection(false, false);
       //      Assert.AreEqual(processes + 1, CountProcesses());
+        }
+
+        /// <summary>
+        /// Ensures that a commit after heavy ammount of inserts does not timeout.
+        /// </summary>
+        [Test]
+        public void CommitDoesNotTimeout()
+        {
+            const int requiredNumberOfRuns = 1;
+            const int binarySize = 5000000;
+            const int requiredNumberOfRowsPerRun = 100;
+
+            Debug.WriteLine("Required Number Of Runs :" + requiredNumberOfRuns);
+            Debug.WriteLine("Required Number Of Rows Per Run :" + requiredNumberOfRowsPerRun);
+
+            suExecSQL("SET GLOBAL max_allowed_packet=64000000");
+
+            MySqlConnectionStringBuilder builder = new MySqlConnectionStringBuilder();
+
+            using (MySqlConnection connection = new MySqlConnection(GetConnectionString(true)))
+            {
+                connection.Open();
+
+                using (MySqlCommand command = new MySqlCommand())
+                {
+                    command.Connection = connection;
+                    command.CommandType = CommandType.Text;
+                    command.CommandText = "DROP TABLE IF EXISTS test_timeout;";
+                    command.ExecuteNonQuery();
+
+                    StringBuilder sqlCommand = new StringBuilder(512);
+
+                    sqlCommand.Append("CREATE TABLE test_timeout (");
+                    sqlCommand.Append("identity INT NOT NULL auto_increment, ");
+                    sqlCommand.Append("a INT NOT NULL, ");
+                    sqlCommand.Append("b INT NOT NULL, ");
+                    sqlCommand.Append("c INT NOT NULL, ");
+                    sqlCommand.Append("binary_data LONGBLOB NOT NULL, ");
+                    sqlCommand.Append("PRIMARY KEY(identity), ");
+                    sqlCommand.Append("KEY `abc` (`a`,`b`, `c`) ");
+                    sqlCommand.Append(") TYPE = INNODB");
+
+                    command.CommandText = sqlCommand.ToString();
+                    command.ExecuteNonQuery();
+                }
+
+                for (int numberOfRuns = 0; numberOfRuns < requiredNumberOfRuns; ++numberOfRuns)
+                {
+                    using (MySqlTransaction transaction = connection.BeginTransaction())
+                    {
+                        Stopwatch stopwatch = Stopwatch.StartNew();
+
+                        using (MySqlCommand command = new MySqlCommand())
+                        {
+                            command.Connection = connection;
+                            command.CommandText = "INSERT INTO test_timeout VALUES (?f1, ?f2, ?f3, ?f4, ?f5)";
+                            command.Parameters.Add("?f1", MySqlDbType.Int32);
+                            command.Parameters.Add("?f2", MySqlDbType.Int32);
+                            command.Parameters.Add("?f3", MySqlDbType.Int32);
+                            command.Parameters.Add("?f4", MySqlDbType.Int32);
+                            command.Parameters.Add("?f5", MySqlDbType.LongBlob);
+                            command.CommandTimeout = 0;
+                            command.Prepare();
+
+
+                            byte[] buffer;
+
+                            using (MemoryStream stream = new MemoryStream())
+                            {
+                                using (BinaryWriter binary = new BinaryWriter(stream))
+                                {
+                                    int count = 0;
+
+                                    while (stream.Position < binarySize)
+                                    {
+                                        binary.Write(++count);
+                                    }
+                                }
+
+                                buffer = stream.ToArray();
+                            }
+
+                            for (int i = 0; i < requiredNumberOfRowsPerRun; ++i)
+                            {
+                                command.Parameters[1].Value = i;
+                                command.Parameters[2].Value = i;
+                                command.Parameters[3].Value = i;
+                                command.Parameters[4].Value = buffer;
+                                command.ExecuteNonQuery();
+                            }
+                        }
+
+                        transaction.Commit();
+
+                        Assert.IsNotNull(transaction);
+
+                        stopwatch.Stop();
+
+                        double seconds = stopwatch.Elapsed.TotalSeconds;
+                        double recordsPerSecond = requiredNumberOfRowsPerRun / seconds;
+
+                        StringBuilder sb = new StringBuilder();
+                        sb.AppendFormat("Truncate Result : Insert {0} Took {1:F4}; Per Second {2:F1} ",
+                        requiredNumberOfRowsPerRun, seconds, recordsPerSecond);
+
+                        Debug.WriteLine(sb.ToString());
+                    }
+
+                    using (MySqlCommand command = new MySqlCommand())
+                    {
+                        command.Connection = connection;
+                        command.CommandText = "SELECT * FROM test_timeout";
+
+                        Stopwatch stopwatch = Stopwatch.StartNew();
+                        int count = 0;
+
+                        using (MySqlDataReader reader = command.ExecuteReader())
+                        {
+                            int previous = -1;
+
+                            while (reader.Read())
+                            {
+                                int current = reader.GetInt32(0);
+                                Assert.Greater(current, previous);
+                                previous = current;
+
+                                ++count;
+                            }
+                        }
+
+                        stopwatch.Stop();
+
+                        double seconds = stopwatch.Elapsed.TotalSeconds;
+                        double recordsPerSecond = count / seconds;
+
+                        StringBuilder sb = new StringBuilder();
+                        sb.AppendFormat("Test Result : Select {0} Took {1:F4}; Per Second {2:F1} ",
+                        count, seconds, recordsPerSecond);
+
+                        Debug.WriteLine(sb.ToString());
+                    }
+
+                    using (MySqlCommand command = new MySqlCommand())
+                    {
+                        command.Connection = connection;
+                        command.CommandText = "TRUNCATE TABLE test_timeout";
+                        command.ExecuteNonQuery();
+                    }
+                }
+
+                MySqlConnection.ClearPool(connection);
+            }
         }
     }
 }
